about page initial commit

--- a/css-projects/travel_website/index.html
+++ b/css-projects/travel_website/index.html
@@ -22,10 +22,10 @@
             <div class="header-content">
                 <h1 class="lg-heading text-light">Travel the world</h1>
                 <p class="text-light">Lorem ipsum dolor sit amet consectetur. Distinctio, ipsum.</p>
-                <a href="#showcase1" class="btn btn-primary md-heading text-red">Explore Places</a>
+                <a href="#explore-places" class="btn btn-primary md-heading text-red">Explore Places</a>
             </div>
     </header>
-    <section class="showcase" id="showcase1">
+    <section class="showcase" id="explore-places">
         <div class="container">
             <div class="row row1">
                 <div class="img-box">
@@ -72,7 +72,12 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <h1>This is footer</h1>
+            <div class="social-media-links">
+                <i class="fa-brands fa-facebook fa-4x"></i>
+                <i class="fa-brands fa-twitter fa-4x"></i>
+                <i class="fa-brands fa-instagram fa-4x"></i>
+            </div>
+            <p>World Travel &copy; 2025, All Rights Reserved</p>
         </div>
     </footer>
 </body>
