finished about page coding

--- a/css-projects/travel_website/html/about.html
+++ b/css-projects/travel_website/html/about.html
@@ -19,8 +19,53 @@
         </div>
     </nav>
 
-    <section>
-        <h1>Hello World...........</h1>
+    <section class="about">
+        <div class="container">
+            <h2 class="lg-heading text-black about-heading">About Us</h2>
+            <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea recusandae aliquam omnis, cumque inventore reprehenderit incidunt? Deleniti exercitationem fugiat vel, asperiores in dolore unde earum esse minus doloribus enim. Qui!</p>
+            <div class="about-list-wrap">
+                <div class="list list-1">
+                    <ul>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                    </ul>
+                </div>
+                <div class="list list-2">
+                    <ul>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="counts">
+                <div class="count-item cont-item-1">
+                    <span>2500</span>
+                    <p>Travelled</p>
+                </div>
+                <div class="count-item cont-item-2">
+                    <span>500</span>
+                    <p>Places</p>
+                </div>
+                <div class="count-item cont-item-3">
+                    <span>400</span>
+                    <p>Guide</p>
+                </div>
+                <div class="count-item cont-item-4">
+                    <span>20</span>
+                    <p>Sport</p>
+                </div>
+            </div>
+            <div class="cta-banner">
+                <div class="cta-banner-left">
+                    <p class="cta-line">What are you waiting for,  reach us right now.</p>
+                </div>
+                <div class="cta-banner-right">
+                    <a href="./contact.html" class="btn-cta">Contact Us</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
