fixed footer bottom issue

--- a/css-projects/travel_website/html/about.html
+++ b/css-projects/travel_website/html/about.html
@@ -68,7 +68,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer bottom-footer">
         <div class="container">
             <div class="social-media-links">
                 <i class="fa-brands fa-facebook fa-4x"></i>
